--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
+    "sass": "^1.90.0",
     "stylelint": "^16.23.1",
     "stylelint-config-standard-scss": "^15.0.1",
     "stylelint-order": "^7.0.0",
