--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "sass": "^1.90.0",
+    "sharp": "^0.34.3",
     "stylelint": "^16.23.1",
     "stylelint-config-standard-scss": "^15.0.1",
     "stylelint-order": "^7.0.0",
-    "vite": "^7.1.2"
+    "svgo": "^4.0.0",
+    "vite": "^7.1.2",
+    "vite-plugin-html-inject": "^1.1.2",
+    "vite-plugin-image-optimizer": "^2.0.2",
+    "vite-plugin-minify": "^2.1.0"
   }
 }
