--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.3.0",
-    "prettier": "^3.6.2",
-    "sass": "^1.90.0",
-    "sharp": "^0.34.3",
-    "stylelint": "^16.23.1",
-    "stylelint-config-standard-scss": "^15.0.1",
-    "stylelint-order": "^7.0.0",
-    "svgo": "^4.0.0",
-    "vite": "^7.1.2",
-    "vite-plugin-html-inject": "^1.1.2",
-    "vite-plugin-image-optimizer": "^2.0.2",
-    "vite-plugin-minify": "^2.1.0"
-  }
+    "name": "vite-project",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "format": "prettier . --write"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.33.0",
+        "eslint": "^9.33.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "globals": "^16.3.0",
+        "prettier": "^3.6.2",
+        "sass": "^1.90.0",
+        "sharp": "^0.34.3",
+        "stylelint": "^16.23.1",
+        "stylelint-config-standard-scss": "^15.0.1",
+        "stylelint-order": "^7.0.0",
+        "svgo": "^4.0.0",
+        "vite": "^7.1.2",
+        "vite-plugin-html-inject": "^1.1.2",
+        "vite-plugin-image-optimizer": "^2.0.2",
+        "vite-plugin-minify": "^2.1.0"
+    }
 }
